--- a/iorder-style.html
+++ b/iorder-style.html
@@ -3,6 +3,7 @@
 <link rel="import" href="../paper-styles/color.html"/>
 <link rel="import" href="../paper-styles/shadow.html"/>
 <link rel="import" href="../paper-styles/typography.html"/>
+<link rel="import" href="default-theme.html"/>
 <link rel="import" href="iorder-icon.html"/>
 
 <!--
