--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -4,3 +4,17 @@ iOrder PWA Elements Shared Icons
 
 @demo demo/index.html
 -->
+
+<!--Temporary import icons-->
+
+<link rel="import" href="../iron-icon/iron-icon.html"/>
+<link rel="import" href="../iron-iconset-svg/iron-iconset-svg.html"/>
+<link rel="import" href="bower_components/iron-icons/device-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/editor-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/hardware-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/image-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/maps-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/notification-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/places-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/social-icons.html"/>
+<link rel="import" href="bower_components/iron-icons/iron-icons.html"/>
