doc(iorder-icon): PE-20 add document for custom icon

--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -18,3 +18,6 @@ iOrder PWA Elements Shared Icons
 <link rel="import" href="bower_components/iron-icons/places-icons.html"/>
 <link rel="import" href="bower_components/iron-icons/social-icons.html"/>
 <link rel="import" href="bower_components/iron-icons/iron-icons.html"/>
+
+
+<!--add custom icon svg-->
