fix(iorder-icon): PE-20 fix path address

--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -9,15 +9,16 @@ iOrder PWA Elements Shared Icons
 
 <link rel="import" href="../iron-icon/iron-icon.html"/>
 <link rel="import" href="../iron-iconset-svg/iron-iconset-svg.html"/>
-<link rel="import" href="bower_components/iron-icons/device-icons.html"/>
-<link rel="import" href="bower_components/iron-icons/editor-icons.html"/>
-<link rel="import" href="bower_components/iron-icons/hardware-icons.html"/>
-<link rel="import" href="bower_components/iron-icons/image-icons.html"/>
-<link rel="import" href="bower_components/iron-icons/maps-icons.html"/>
-<link rel="import" href="bower_components/iron-icons/notification-icons.html"/>
-<link rel="import" href="bower_components/iron-icons/places-icons.html"/>
-<link rel="import" href="bower_components/iron-icons/social-icons.html"/>
-<link rel="import" href="bower_components/iron-icons/iron-icons.html"/>
+<link rel="import" href="../iron-icons/device-icons.html"/>
+<link rel="import" href="../iron-icons/editor-icons.html"/>
+<link rel="import" href="../iron-icons/hardware-icons.html"/>
+<link rel="import" href="../iron-icons/image-icons.html"/>
+<link rel="import" href="../iron-icons/maps-icons.html"/>
+<link rel="import" href="../iron-icons/notification-icons.html"/>
+<link rel="import" href="../iron-icons/places-icons.html"/>
+<link rel="import" href="../iron-icons/social-icons.html"/>
+<link rel="import" href="../iron-icons/av-icons.html"/>
+<link rel="import" href="../iron-icons/iron-icons.html"/>
 
 
 <!--add custom icon svg-->
