feat(iorder-icon): PE-20 add import

--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -18,6 +18,7 @@ iOrder PWA Elements Shared Icons
 <link rel="import" href="../iron-icons/places-icons.html"/>
 <link rel="import" href="../iron-icons/social-icons.html"/>
 <link rel="import" href="../iron-icons/av-icons.html"/>
+<link rel="import" href="../iron-icons/communication-icons.html"/>
 <link rel="import" href="../iron-icons/iron-icons.html"/>
 
 
