--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -20,6 +20,6 @@ iOrder PWA Elements Shared Icons
 <link rel="import" href="../iron-icons/av-icons.html"/>
 <link rel="import" href="../iron-icons/communication-icons.html"/>
 <link rel="import" href="../iron-icons/iron-icons.html"/>
-
+<link rel="import" href="../iron-iconset-svg/iron-iconset-svg.html"/>
 
 <!--add custom icon svg-->
