--- a/icon-demo/index.html
+++ b/icon-demo/index.html
@@ -21,16 +21,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="../../iron-icons.html">
 
   <!-- load the rest -->
-  <link rel="import" href="../../av-icons.html">
-  <link rel="import" href="../../communication-icons.html">
-  <link rel="import" href="../../device-icons.html">
-  <link rel="import" href="../../editor-icons.html">
-  <link rel="import" href="../../hardware-icons.html">
-  <link rel="import" href="../../image-icons.html">
-  <link rel="import" href="../../maps-icons.html">
-  <link rel="import" href="../../notification-icons.html">
-  <link rel="import" href="../../social-icons.html">
-  <link rel="import" href="../../places-icons.html">
+  <link rel="import" href="../../iron-icons/av-icons.html">
+  <link rel="import" href="../../iron-icons/communication-icons.html">
+  <link rel="import" href="../../iron-icons/device-icons.html">
+  <link rel="import" href="../../iron-icons/editor-icons.html">
+  <link rel="import" href="../../iron-icons/hardware-icons.html">
+  <link rel="import" href="../../iron-icons/image-icons.html">
+  <link rel="import" href="../../iron-icons/maps-icons.html">
+  <link rel="import" href="../../iron-icons/notification-icons.html">
+  <link rel="import" href="../../iron-icons/social-icons.html">
+  <link rel="import" href="../../iron-icons/places-icons.html">
 
   <style is="custom-style">
 
