feat(iorder-icon-demo): PE-30 add icon

--- a/icon-demo/index.html
+++ b/icon-demo/index.html
@@ -18,7 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
 
   <!-- load default iconset -->
-  <link rel="import" href="../../iron-icons.html">
+  <link rel="import" href="../../iron-icons/iron-icons.html">
 
   <!-- load the rest -->
   <link rel="import" href="../../iron-icons/av-icons.html">
@@ -97,36 +97,183 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <template is="dom-bind">
 
-   <iron-meta type="iconset" list="{{iconsets}}"></iron-meta>
+   <!--<iron-meta type="iconset" list="{{iconsets}}"></iron-meta>-->
 
-    <template is="dom-repeat" items="{{iconsets}}">
+    <!--<template is="dom-repeat" items="{{iconsets}}">-->
 
-      <h2>{{item.name}}</h2>
+      <!--<h2>{{item.name}}</h2>-->
 
       <div class="set">
 
-        <template is="dom-repeat" items="{{getIconNames(item)}}">
+        <!--<template is="dom-repeat"> items="{{getIconNames(item)}}"-->
 
           <span class="container">
-            <iron-icon icon="{{item}}"></iron-icon>
-            <div>{{item}}</div>
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
           </span>
 
-        </template>
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+          <span class="container">
+            <iron-icon icon="home"></iron-icon>
+            <div>home</div>
+          </span>
+
+
+
+        <!--</template>-->
 
       </div>
 
-    </template>
+    <!--</template>-->
 
   </template>
-
+<!--
   <script>
 
     document.querySelector('[is=dom-bind]').getIconNames = function(iconset) {
       return iconset.getIconNames();
     };
 
-  </script>
+  </script>-->
 
 </body>
 </html>
