feat(iorder-icon-demo): PE-30 add icons for demo

--- a/icon-demo/index.html
+++ b/icon-demo/index.html
@@ -108,153 +108,153 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <!--<template is="dom-repeat"> items="{{getIconNames(item)}}"-->
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:home"></iron-icon>
+            <div>icons:home</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="maps:local-phone"></iron-icon>
+            <div>maps:local-phone</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:power-settings-new"></iron-icon>
+            <div>icons:power-settings-new</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="editor:insert-emoticon"></iron-icon>
+            <div>editor:insert-emoticon</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="device:access-time"></iron-icon>
+            <div>device:access-time</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help-outline"></iron-icon>
+            <div>icons:help-outline</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:arrow-forward"></iron-icon>
+            <div>icons:arrow-forward</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:arrow-back"></iron-icon>
+            <div>icons:arrow-back</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:chevron-left"></iron-icon>
+            <div>icons:chevron-left</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:chevron-right"></iron-icon>
+            <div>icons:chevron-right</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="image:brush"></iron-icon>
+            <div>image:brush</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:add"></iron-icon>
+            <div>icons:add</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:check"></iron-icon>
+            <div>icons:check</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:close"></iron-icon>
+            <div>icons:close</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:search"></iron-icon>
+            <div>icons:search</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:file-download"></iron-icon>
+            <div>icons:file-download</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:create"></iron-icon>
+            <div>icons:create</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:more-vert"></iron-icon>
+            <div>icons:more-vert</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="image:remove-red-eye"></iron-icon>
+            <div>image:remove-red-eye</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:arrow-drop-down"></iron-icon>
+            <div>icons:arrow-drop-down</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:build"></iron-icon>
+            <div>icons:build</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
           <span class="container">
-            <iron-icon icon="home"></iron-icon>
-            <div>home</div>
+            <iron-icon icon="icons:help"></iron-icon>
+            <div>icons:help</div>
           </span>
 
 
