fix(iorder-icon): PE-30 change path demo

--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -2,7 +2,7 @@
 `iorder-icon`
 iOrder PWA Elements Shared Icons
 
-@demo demo/index.html
+@demo demo/iorder-style_test.html
 -->
 
 <!--Temporary import icons-->
