chore: PE-30 fix path address demo file

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,6 +20,7 @@
       <h3>Basic iorder-style Demo</h3>
       <demo-snippet>
         <template>
+          <a href="iorder-icon-demo.html" target="_blank">iorder icon demo</a>
           <iorder-style></iorder-style>
         </template>
       </demo-snippet>
