--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -2,7 +2,7 @@
 `iorder-icon`
 iOrder PWA Elements Shared Icons
 
-@demo demo/iorder-icon-demo.html
+@demo demo/index.html
 -->
 
 <!--Temporary import icons-->
