--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -17,3 +17,9 @@ iOrder PWA Elements Shared Icons
 <link rel="import" href="../iron-iconset-svg/iron-iconset-svg.html"/>
 
 <!--add custom icon svg-->
+<iron-iconset-svg name="icons" size="24">
+	<svg>
+		<defs>
+		</defs>
+	</svg>
+</iron-iconset-svg>
