--- a/iorder-icon.html
+++ b/iorder-icon.html
@@ -6,11 +6,11 @@ iOrder PWA Elements Shared Icons
 -->
 
 <!--Temporary import icons-->
-<link rel="import" href="../iron-icons/device-icons.html"/>
+<!--<link rel="import" href="../iron-icons/device-icons.html"/>
 <link rel="import" href="../iron-icons/editor-icons.html"/>
 <link rel="import" href="../iron-icons/image-icons.html"/>
 <link rel="import" href="../iron-icons/maps-icons.html"/>
-<link rel="import" href="../iron-icons/iron-icons.html"/>
+<link rel="import" href="../iron-icons/iron-icons.html"/>-->
 
 
 <link rel="import" href="../iron-icon/iron-icon.html"/>
