--- a/iorder-theme.html
+++ b/iorder-theme.html
@@ -1,13 +1,13 @@
-<link rel="import" href="../polymer/polymer.html"/>
+<link rel="import" href="../polymer/polymer-element.html"/>
 <link rel="import" href="../paper-styles/default-theme.html"/>
 
 <style is="custom-style">
 
-  :root {
-    /*
-     * Our customization variable under material  default theme.
-     */
-     --iorder-var: 'hi';
-  }
+	:root {
+		/*
+		 * Our customization variable under material  default theme.
+		 */
+		 --iorder-var: 'hi';
+	}
 
 </style>
