refactor: IRWC-9 rename files and cleanup

--- a/iorder-style.html
+++ b/iorder-style.html
@@ -1,10 +1,7 @@
 
 <link rel="import" href="../paper-styles/paper-styles.html"/>
-<link rel="import" href="../paper-styles/color.html"/>
-<link rel="import" href="../paper-styles/shadow.html"/>
-<link rel="import" href="../paper-styles/typography.html"/>
-<link rel="import" href="default-theme.html"/>
-<link rel="import" href="iorder-icon.html"/>
+<link rel="import" href="theme.html"/>
+<link rel="import" href="icon.html"/>
 
 <!--
 `iorder-style`
