feat: IRWC-9 add custom theme

--- a/theme.html
+++ b/theme.html
@@ -7,7 +7,11 @@
 		/*
 		 * Our customization variable under material  default theme.
 		 */
-		 --iorder-var: 'hi';
+		--primary-color: var(--paper-blue-500);
+		--light-primary-color: var(--paper-blue-100);
+		--dark-primary-color: var(--paper-blue-700);
+
+    --font-color-white: var(--paper-grey-50);
 	}
 
 </style>
